[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://resource/sounds/music/game/6.wav" type="AudioStream" id=2]
[ext_resource path="res://resource/sounds/music/game/7.wav" type="AudioStream" id=3]
[ext_resource path="res://resource/sounds/music/game/5.wav" type="AudioStream" id=4]

[node name="MusicController" type="Node2D"]
script = ExtResource( 1 )

[node name="MusicGame1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="MusicGame2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0

[node name="MusicGame3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
